<?xml version="1.0"?>
<package>
  <name>vigir_stump_grasp_controller</name>
  <version>0.0.0</version>
  <description>The vigir_stump_grasp_controller package</description>

  <maintainer email="romay@sim.tu-darmstadt.de">Alberto Romay</maintainer>  
  <author email="romay@sim.tu-darmstadt.de">Alberto Romay</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vigir_manipulation_controller</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vigir_manipulation_controller</run_depend>

  <export>
  </export>
</package>